# jsonldtransformer

./: .gitignore  README.md  pyproject.toml
jsonldtransformer/: JsonLdTransformer.py
